--- a/styles/sass/_homepage.scss
+++ b/styles/sass/_homepage.scss
@@ -1,19 +1,42 @@
 
-main{
-    background-image: url(/assets/backgroundImage.jpg);
-    // background-image: url('night.jpg');
-    background-repeat: no-repeat;
+header {
+    background-color: black;
+    height: 100vh;
+    // background-image: url(assets\backgroundImage.jpg);
+    background-image: url(/assets/osman-rana-HOtPD7Z_74s-unsplash.jpg);
     background-size: cover;
-    background-position: center;
-    // position: relative;
-    width: 100%;
-    height: 100%;
-}
+    background-repeat: no-repeat;
+    overflow: hidden;
+    /* overflow property not working */
+    /* background-position: center; */
+    }
 
-.enter-city,
-.weather-data {
+    body {
+    color: white;
+    }
+
+    form {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+        flex-direction: column;
+        width: 23%;
+    }
+
+    input {
+    border: none;
+        outline: none;
+        border-radius: 10px;
+        padding: 10px 0 10px 10px;
+        background: rgba(255, 255, 255, 0.7);
+    }
+
+    main {
+    display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 80vh;
+        padding: 0 15rem;
+    }
+
+    h1 {
+    text-transform: uppercase;
+    }
