--- a/styles/style.css
+++ b/styles/style.css
@@ -235,17 +235,22 @@ html {
   overflow: hidden;
 }
 
-main {
-  background-image: url(/assets/backgroundImage.jpg);
-  background-repeat: no-repeat;
+header {
+  background-color: black;
+  height: 100vh;
+  background-image: url(/assets/osman-rana-HOtPD7Z_74s-unsplash.jpg);
   background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 100%;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  /* overflow property not working */
+  /* background-position: center; */
 }
 
-.enter-city,
-.weather-data {
+body {
+  color: white;
+}
+
+form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -253,10 +258,31 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  width: 23%;
+}
+
+input {
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  padding: 10px 0 10px 10px;
+  background: rgba(255, 255, 255, 0.7);
+}
+
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 80vh;
+  padding: 0 15rem;
+}
+
+h1 {
+  text-transform: uppercase;
 }
