mvp complete added init function

--- a/styles/style.css
+++ b/styles/style.css
@@ -238,7 +238,7 @@ html {
 header {
   background-color: black;
   height: 100vh;
-  background-image: url(/assets/osman-rana-HOtPD7Z_74s-unsplash.jpg);
+  background-image: url(/assets/backgroundImage.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
