--- a/styles/sass/_homepage.scss
+++ b/styles/sass/_homepage.scss
@@ -2,8 +2,8 @@
 header {
     background-color: black;
     height: 100vh;
-    // background-image: url(assets\backgroundImage.jpg);
-    background-image: url(/assets/osman-rana-HOtPD7Z_74s-unsplash.jpg);
+    background-image: url(/assets/backgroundImage.jpg);
+    // background-image: url(/assets/osman-rana-HOtPD7Z_74s-unsplash.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     overflow: hidden;
