--- a/style.css
+++ b/style.css
@@ -8,6 +8,24 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
+
+html{
+    font-size: 125%;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    color: white;
+    /* font-size: 2rem; */
+}
+
+.wrapper{
+    width: 90%;
+    margin: 0 auto;
+    max-width: 1200px;
+}
+
 header,
 .header-cloudy{
     height: 100vh;
@@ -16,56 +34,6 @@ header,
     background-size: cover;
     background-repeat: no-repeat;
     /* overflow: hidden; */
-}
-
-body {
-    color: white;
-    /* margin: 0; */
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    width: 20%;
-}
-
-input {
-    border: none;
-    outline: none;
-    border-radius: 10px;
-    padding: 10px 0 10px 10px;
-    background: rgba(255, 255, 255, 0.7);
-}
-
-main {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 80vh;
-    /* padding: 0 15rem; */
-}
-
-h1 {
-    text-transform: uppercase;
-}
-
-h4{
-    text-transform: capitalize;
-}
-
-.capitalize{
-    text-transform: capitalize;
-}
-
-.temperature{
-    font-size: 3.8rem;
-    margin: 0;
-}
-
-.display-weather{
-    /* background: rgba(14, 13, 13, 0.2); */
-    position: relative;
-    top: 5%;
 }
 
 .header-clear{
@@ -77,21 +45,139 @@ h4{
     background-repeat: no-repeat;
 }
 
+.header-rain{
+    background-image: url(./assets/rain.jpg);
+    /* background-color: black; */
+    background-position: center;
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+main {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 80vh;
+}
+
+.flex-container{
+    position: relative;
+    top: 7%;
+    width: 35%;
+}
+
+.temp-icon{
+    display: flex;
+    align-items: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    /* width: 25%; */
+}
+
+label{
+    font-size: 1.3rem;
+    font-weight: bold;
+    margin-bottom: 7%;
+}
+
+input {
+    font-size: 1rem;
+    text-indent: 15%;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    padding: 10px 0 10px 10px;
+    background: rgba(255, 255, 255, 0.7);
+    background-image: url(./assets/search-solid.svg);
+    background-repeat: no-repeat;
+    background-size: 30px 20px;
+    background-position: 5px;
+}
+
+input:required{
+    box-shadow: none;
+}
+
+h1{
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    margin-bottom: -15px;
+}
+
+p{
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.capitalize{
+    text-transform: capitalize;
+}
+
+.temperature{
+    font-size: 3rem;
+    margin: 0;
+}
+
+.designer-info p{
+    text-align: center;
+    font-size: 0.7rem;
+}
+
+.designer-info a{
+    text-decoration: none;
+    color: white;
+    padding: 5px;
+}
+
+.designer-info a:hover{
+    color:#ea593e;
+}
+
+
+
+/* .juno-logo p{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 1px soild aliceblue;
+    text-align: center;
+    font-size: 1rem;
+    border: 3px solid #ea593e;
+    color: #ea593e;
+} */
+
 /* media queries */
 
-@media (max-width:800px) {
+@media (max-width:850px) {
     main{
         flex-direction: column-reverse;
+        justify-content: center;
     }
 
-    form{
+    .flex-container{
+        text-align: center;
+    } 
+
+    .temp-icon{
+        justify-content: center;
+    }
+
+    .temp-icon img{
+        margin-left: 20%;
+    }
+
+
+}
+
+    /* form{
         width: 40%;
     }
 
-    form h2{
-        text-align: center;
-    }
-
+    form h2,
     div{
         text-align: center;
     }
