--- a/style.css
+++ b/style.css
@@ -1,13 +1,10 @@
 html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
 
-.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
-
 html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
 
 *, *:before, *:after {box-sizing: inherit}
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
-
 
 html {
     font-size: 125%;
@@ -25,11 +22,12 @@ body,
 .thunderstorm, 
 .snow,
 .mist{
-    height: 100vh;
+    min-height: 100vh;
+    background-color: black;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    overflow: hidden;
+    /* overflow-y: scroll; */
 }
 .cloudy {
     background-image: url(./assets/weather/cloudy.jpg);
@@ -66,17 +64,13 @@ main{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 80vh;
-    margin-top: 5%;
+    min-height: 85vh;
+    padding-top: 40px;
 }
 
 .flex-container{
     width: 35%;
-}
-
-.temperature{
-    display: flex;
-    align-items: center;
+    margin-top: 40px;
 }
 
 /* dynamic content styles */
@@ -85,6 +79,7 @@ h1{
     font-size: 1.8rem;
     text-transform: uppercase;
     margin-bottom: -15px;
+    margin-top: 0;
 }
 
 p{
@@ -101,18 +96,25 @@ p{
     margin: 0;
 }
 
+.weather-conditions p:nth-of-type(3){
+    margin-bottom: 0;
+}
+
 /* form styles */
+
+.form-container{
+    position: relative;
+}
 
 form {
     display: flex;
     flex-direction: column;
-    position: relative;
 }
 
 label{
     font-size: 1.3rem;
     font-weight: bold;
-    margin-bottom: 7%;
+    margin-bottom: 10px;
 }
 
 input{
@@ -134,14 +136,27 @@ input:required{
 }
 
 .error-message{
-    font-size: 0.9rem;
     display: none;
     position: absolute;
-    top: 90px;
-    left: 10px;
+    bottom: -25px;
+    width: 100%;
+}
+
+.error-message p{
+    font-size: 0.9rem;
+    font-weight: normal;
+    margin: 0;
 }
 
 /* footer styles */
+
+footer{
+    /* min-height: 10vh; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 40px;
+}
 
 a{
     text-decoration: none;
@@ -151,33 +166,33 @@ a{
 
 .juno-college p{
     text-align: center;
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     margin: 0;
 }
 
 .juno-college a{
-    font-size: 0.8rem;
-    transition: color 0.4s;
+    /* font-size: 0.8rem; */
+    transition: all 0.4s;
 }
 
 .juno-college a:hover,
 .juno-college a:focus{
-    color:#ea593e;
+    color: #ea593e;
 }
 
 .contact-info{
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     display: flex;
     justify-content: center;
 }
 
 .contact-info a{
-    transition: font-size 0.4s;
+    transition: all 0.4s;
 }
 
 .contact-info a:hover,
 .contact-info a:focus{
-    font-size: 2rem;
+    box-shadow: 0 .5rem 1rem white;
 }
 
 /* animations */
@@ -218,7 +233,7 @@ a{
 @media (max-width:850px) {
 
     .clear {
-    background-position: left;
+        background-position: left;
     }
 
     main{
@@ -226,54 +241,58 @@ a{
         justify-content: space-evenly;
     }
 
+    .form-container{
+        width: 50%;
+    }
+
     form{
         text-align: center;
     }
 
-    .error-message{
-        left: 23px;
+    form label{
+        font-size: 1.2rem;
+    }
+
+    form input{
+        text-indent: 8%;
+        font-size: 0.9rem;
+        background-size: 30px 18px;
     }
 
     .flex-container{
         text-align: center;
         width: 100%;
+        margin-top: 40px;
     } 
+}
 
-    .temperature{
-        justify-content: center;
+@media (max-width: 600px) {
+
+    .form-container{
+        width: 70%;
     }
 
-    .temperature img{
-        margin-left: 20%;
-    }
-
-    footer{
-        margin-top: 5%;
+    form input{
+        text-indent: 10%;
     }
 }
 
 @media (max-width: 400px) {
 
     .city-div h1{
-        font-size: 1.6rem;
+        font-size: 1.7rem;
     }
 
     .weather-conditions p{
-        margin: 10px;
+        margin: 15px 0;
     }
 
-    input{
+    .form-container{
+        width: 80%;
+    }
+
+    .error-message p{
         font-size: 0.8rem;
-    }
-
-    label{
-        font-size: 1.1rem;
-    }
-
-    .error-message{
-        font-size: 0.8rem;
-        top: 80px;
-        left: 10px;
     }
 
     .juno-college a{
@@ -281,6 +300,6 @@ a{
     }
 
     .contact-info{
-        font-size: 1.4rem;
+        font-size: 1.2rem;
     }
 }
